--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,12 @@
 /* ------------------------------------------margin */
 
 
-
+.bg-img{
+    background-image: url(../img/hero.png);
+    background-position: center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
 
 
 
