--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,7 @@
         height: 3px;
         margin: 6px auto;
         transition: all 0.3s ease-in-out;
-        background: linear-gradient(146.79deg, var(--gradient-white) 0%, var(--golden) 97.77%);
+        background-color: var(--white);
     }
 }
 /* --------------------------------------Navbar */
