--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,15 @@
 .pt-26{
     padding-top: 26px;
 }
+.pt-27{
+    padding-top: 27px;
+}
+.pt-261{
+    padding-top: 261px;
+}
+.pb-46{
+    padding-bottom: 46px;
+}
 /* ------------------------------------------padding */
 /* ------------------------------------------gap */
 .gap-81{
@@ -31,6 +40,9 @@
 }
 /* ------------------------------------------gap */
 /* ------------------------------------------width */
+.max-w-547{
+    max-width: 547px;
+}
 .max-w-1326{
     max-width: 1326px;
 }
@@ -47,6 +59,9 @@
 }
 
 
+.opacity-7{
+    opacity: 70%;
+}
 
 
 
@@ -62,14 +77,25 @@
 
 
 
+.btn-1 {
+    padding: 16px 41px 15px 40px;
+    border: 1px solid white;
+    border-radius: 45px;
+}
 
-.btn-1 {}
 
+.btn-1:hover {
+    color: var(--white);
+    background-color: transparent !important;
 
-.btn-1:hover {}
+}
 
 .cursor-pointer {
     cursor: pointer;
+}
+.duration-300{
+    transition: all 300ms linear;
+    
 }
 
 .slick-btn {
