--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,9 @@
 .pt-27{
     padding-top: 27px;
 }
+.pt-52{
+    padding-top: 52px;
+}
 .pt-261{
     padding-top: 261px;
 }
@@ -44,6 +47,9 @@
 }
 /* ------------------------------------------padding */
 /* ------------------------------------------gap */
+.gap-23{
+    gap: 23px;
+}
 .gap-81{
     gap: 81px;
 }
@@ -115,33 +121,10 @@
     transition: all 300ms linear;
     
 }
-
-.slick-btn {
-    width: 40px;
-    border: 2px solid var(--golden);
-    background-color: transparent;
-    height: 40px;
+.media-link:hover{
+    filter: drop-shadow( 0px 0px 10px var(--white));
 }
 
-.slick-btn:hover {
-    background-image: linear-gradient(to bottom left, var(--gradient-white), var(--golden)) !important;
-}
-
-.pre-btn {
-    left: -30px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.next-btn {
-    right: -30px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.slick-btn:hover svg path {
-    fill: white;
-}
 
 
 
