--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,20 @@
 .pt-21{
     padding-top: 21px;
 }
+.pt-25{
+    padding-top: 25px;
+}
 .pt-26{
     padding-top: 26px;
 }
 .pt-27{
     padding-top: 27px;
+}
+.pt-41{
+    padding-top: 41px;
+}
+.pt-44{
+    padding-top: 44px;
 }
 .pt-52{
     padding-top: 52px;
@@ -39,11 +48,15 @@
 .pb-10{
     padding-bottom: 10px;
 }
+
 .pb-46{
     padding-bottom: 46px;
 }
 .pb-63{
     padding-bottom: 63px;
+}
+.pb-127{
+    padding-bottom: 127px;
 }
 /* ------------------------------------------padding */
 /* ------------------------------------------gap */
@@ -55,6 +68,9 @@
 }
 /* ------------------------------------------gap */
 /* ------------------------------------------width */
+.w-117{
+    width: 117px;
+}
 .max-w-547{
     max-width: 547px;
 }
@@ -124,6 +140,15 @@
 .media-link:hover{
     filter: drop-shadow( 0px 0px 10px var(--white));
 }
+
+.card{
+    border-radius: 20px;
+    background-color: var(--card-bg);
+    padding: 39px 39px 34px 40px;
+    /* min-height: 511px; */
+}
+
+
 
 
 
