--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,11 +147,16 @@
     filter: drop-shadow( 0px 0px 10px var(--white));
 }
 
+
 .card{
     border-radius: 20px;
     background-color: var(--card-bg);
     padding: 39px 39px 0 40px;
     /* min-height: 511px; */
+}
+.card:hover{
+    border: 1px solid white;
+    background: transparent;
 }
 
 
