--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,14 @@
 .pt-44{
     padding-top: 44px;
 }
+.pt-47{
+    padding-top: 47px;
+}
 .pt-52{
     padding-top: 52px;
+}
+.pt-110{
+    padding-top: 110px;
 }
 
 .pt-131{
@@ -71,7 +77,9 @@
 .pb-63{
     padding-bottom: 63px;
 }
-
+.px-30{
+    padding: 0 30px !important;
+}
 
 .pb-127{
     padding-bottom: 127px;
@@ -96,11 +104,17 @@
 .max-w-786{
     max-width: 786px;
 }
+.max-w-830{
+    max-width: 830px;
+}
 .max-w-1326{
     max-width: 1326px;
 }
 /* ------------------------------------------width */
 /* ------------------------------------------margin */
+.mb-26{
+    margin-bottom: 26px !important;
+}
 .mt-63{
     margin-top: 63px;
 }
@@ -171,6 +185,44 @@
     }
 }
 /* ------------------------------------------timeline */
+/* ------------------------------------------accordion */
+
+.accordion-button::after {
+    background-image: url(../img/svg/arrowoff.svg);
+     transform: scale(.7) !important;
+ }
+ .accordion-button:not(.collapsed)::after {    
+     background-image: url(../img/svg/arrowon.svg);
+ }
+ .accordion-button:not(.collapsed){
+     background: transparent;
+     box-shadow: 0px 0px;
+     color: var(--black);
+ }
+ .accordion-button{
+     background: #031227;
+     padding: 20px 32px !important;
+     border-radius: 200px;
+     box-shadow: 0px 0px;
+ }
+ .accordion-item{
+     background-color: transparent;
+     border: 0px;         
+ }
+ .accordion-button:not(.collapsed) {
+    background: #031227;
+    
+    
+}
+ .accordion {
+     --bs-accordion-btn-focus-box-shadow:0px 0px ;
+ 
+ }
+ .acc-par{
+    margin-bottom: 20px !important;
+ }
+
+/* ------------------------------------------accordion */
 
 
 .bg-img{
