--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,8 +334,8 @@
     /* min-height: 511px; */
 }
 .card:hover{
-    border: 1px solid white;
-    background: transparent;
+    box-shadow: 0px 0px 20px 1px white;
+    
 }
 
 
