--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,8 +322,8 @@
     transition: all 300ms linear;
     
 }
-.media-link:hover{
-    filter: drop-shadow( 0px 0px 10px var(--white));
+.media-link:hover{    
+    transform: scale(1.3) !important;
 }
 
 
