--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -30,6 +30,8 @@
     --blue: #001D49;
     --bg-color:#000A1A;
     --card-bg: #031227;
+    --sky:#009DFF;
+    --outline-color:#001931;
         
 
 }
