--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,6 +240,55 @@
  }
 
 /* ------------------------------------------accordion */
+/* --------------------------------------preloder */
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+  }
+  
+  .loader {
+    animation: fade-in-down 3s ease infinite;
+  }
+  
+  .max-158 {
+    width: 312px !important;
+    height: 312px !important;
+  }
+  
+  @keyframes fade-in-down {
+    0% {
+      opacity: 0;
+      transform: translateY(0);
+    }
+  
+    100% {
+      opacity: 1;
+      transform: translateY(-40px);
+    }
+  }
+.loader-text:before {
+    content: attr(data-text);
+    position: absolute;
+    overflow: hidden;
+    max-width: 7em;
+    white-space: nowrap;
+    color: var(--white);
+    animation: loading 3s linear;
+}
+@keyframes loading {
+    0% {
+        max-width: 0;
+    }
+}
+/* --------------------------------------preloder */
 
 
 .bg-img{
@@ -247,6 +296,7 @@
     background-position: center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    
 }
 .footer-img{
     background-image: url(../img/footer.png);
@@ -547,37 +597,3 @@
 @media (min-width:1200px) {}
 
 
-
-.loading-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--blue);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 100;
-  }
-  
-  .loader {
-    animation: fade-in-down 3s ease infinite;
-  }
-  
-  .max-158 {
-    width: 312px !important;
-    height: 312px !important;
-  }
-  
-  @keyframes fade-in-down {
-    0% {
-      opacity: 0;
-      transform: translateY(-20px);
-    }
-  
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
