--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,6 +135,7 @@
     max-width: 547px;
 }
 
+
 .max-w-786 {
     max-width: 786px;
 }
@@ -376,7 +377,7 @@
 }
 
 .card:hover {
-    box-shadow: 0px 0px 20px 1px var(--white);
+    box-shadow: 0px 0px 20px 1px var(--blue);
 }
 
 .card:hover img {
@@ -587,7 +588,9 @@
     .pb-lg-127 {
         padding-bottom: 127px;
     }
-
+    .max-w-574{
+        max-width: 574px !important;
+    }
     .pt-lg-100 {
         padding-top: 100px !important;
     }
