--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,8 +94,12 @@
     padding-bottom: 46px;
 }
 
-.px-30 {
-    padding: 0 30px !important;
+
+.pl-30{
+    padding-left: 30px !important;
+}
+.pr-30{
+    padding-right: 30px !important;
 }
 
 
@@ -318,7 +322,7 @@
 .bg-img {
     background-image: url(../images/png/hero.png);
     background-position: center;
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -412,7 +416,6 @@
     bottom: 20px;
     right: 30px;
     z-index: 99;
-    font-size: 18px;
     border: none;
     outline: none;
     background-color: var(--card-bg);
